--- a/style.css
+++ b/style.css
@@ -1,16 +1,19 @@
-@import url('https://fonts.google.com/specimen/Figtree');
+@import url('https://fonts.google.com/specimen/Inter');
 
 :root {
-    --clr-primary-900: hsl(0, 0%, 7%);
-    --clr-primary-500: hsl(47, 88%, 63%);
-    --clr-primary-400: hsl(0, 0%, 42%);
+    --clr-primary-900: hsl(0, 0%, 8%);
+    --clr-primary-800: hsl(0, 0%, 12%);
+    --clr-primary-700: hsl(0, 0%, 20%);
+    
+    --clr-primary-600: hsl(75, 94%, 57%);
 
     --clr-neutral-100:  hsl(0, 0%, 100%);
 
-    --ff-base: 'Figtree', sans-serif;
+    --ff-base: 'Inter', sans-serif;
 
-    --fw-bold: 800;
-    --fw-regular: 500;
+    --fw-bolder: 700;
+    --fw-bold: 600;
+    --fw-base: 400;
 }
 
 /*
@@ -78,79 +81,62 @@ li {
    main Css
 ************/
 body {
+    font-size: 14px;
     font-family: var(--ff-base);
-    font-weight: var(--fw-regular);
-    font-size: 16px;
-    color: var(--clr-primary-900);
-    background-color: var(--clr-primary-500);
-}
-
-.card{
-    border: 1px solid var(--clr-primary-900);
-    border-radius: 20px;
-    margin: 156px 24px;
-    padding: 24px;
-    background-color: var(--clr-neutral-100);
-    box-shadow: 8px 8px 0px var(--clr-primary-900);
-}
-
-.card img{
-    border-radius: 10px;
-}
-
-.card_category {
-    background-color: var(--clr-primary-500);
     font-weight: var(--fw-bold);
-    padding: 4px 12px;
-    margin: 24px 0 12px 0;
-    border-radius: 4px;
-    width: 6rem;
-    font-size: 0.9rem;
-    text-align: center;
+    background-color: var(--clr-primary-900);
+    color: var(--clr-neutral-100);
+    text-align: center;    
 }
 
-.card_date {
-    font-size: 0.9rem;
-    margin-bottom: 12px;
+.profile {
+    margin: 120px 15px;
+    padding: 20px;
+    border-radius: 15px;
+    background-color: var(--clr-primary-800);
 }
 
-.card h1 {
-    margin-bottom: 12px;
-    font-size: 1.1rem;
-    font-weight: var(--fw-bold);
+.profile img{
+    border-radius: 50%;
+    width: 5rem;
+    margin: 0rem auto 2rem;
 }
 
-.card_text {
-    color: var(--clr-primary-400);
-    font-size: 0.8rem;
-    margin-bottom: 24px;
+.profile h1 {
+    font-size: 1.5rem;
+    font-weight: var(--fw-bolder);
+    margin-bottom: 0.8rem;
 }
 
-.card_publisher {
-    display: flex;
-    text-align: center;
-    align-items: center;
-    gap: 12px;
+.profile_adress {
+    color: var(--clr-primary-600);
+    margin-bottom: 1rem;
 }
 
-.card_publisher img{
-    width: 32px;
+.profile_description {
+    font-weight: var(--ff-base);
+    margin-bottom: 0.5rem;
 }
 
-.card_publisher p{
-    font-weight: var(--fw-bold);
-    font-size: 0.8rem;
+.profile_link {
+    display: block;
+    background-color: var(--clr-primary-700);
+    color: var(--clr-neutral-100);
+    text-decoration: none;
+    border-radius: 0.5rem;
+    margin-top: 0.8rem;
+    padding: 1rem 0rem;
 }
 
 @media (min-width: 376px) {
-    .card{
-        margin: 156px auto;
-        width: 384px;
+    .profile {
+        margin: 120px auto;
+        width: 25rem;
     }
 
-    .card h1:hover{
-        cursor: pointer;
-        color: var(--clr-primary-500);
+    .profile_link:hover {
+        background-color: var(--clr-primary-600);
+        color: var(--clr-primary-900);
     }
 }
  
