--- a/style.css
+++ b/style.css
@@ -89,8 +89,14 @@ body {
     text-align: center;    
 }
 
+main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
 .profile {
-    margin: 120px 15px;
     padding: 20px;
     border-radius: 15px;
     background-color: var(--clr-primary-800);
@@ -129,8 +135,8 @@ body {
 }
 
 @media (min-width: 376px) {
+    
     .profile {
-        margin: 120px auto;
         width: 25rem;
     }
 
